--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,37 +8,44 @@ body {
     background-color: #d9dcd6;
 }
 
-.header {
+header {
     padding: 20px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     background-color: #2a607c;
-    color: #ffffff;
+    color:   #ffffff;
+    display: flex;
+    justify-content: space-between;
+    ;
 }
 
-.header h1 {
-    display: inline-block;
+h1 {
+    display: flex;
+    justify-content: space-between;
     font-size: 48px;
 }
 
-.header h1 .seo {
+.seo {
     color: #d9dcd6;
 }
 
-.header div {
-    padding-top: 15px;
-    margin-right: 20px;
-    float: right;
+header {
+    padding-top: 25px;
+    display: flex;
+   
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 20px;
 }
 
-.header div ul {
-    list-style-type: none;
+ul {
+    display: flex;
+    justify-content: space-between;
+     list-style-type: none;
+    
 }
-
-.header div ul li {
+li {
+    margin:10px;
     display: inline-block;
-    margin-left: 25px;
+    
 }
 
 a {
